1. Command class for executing Executor 2.Riching Executor Runner